# dermshare

./: .gitignore  LICENSE  NEWS.md  README.md  TODO.md  build-release.sh
app/: .gitignore  dermshare-ws.py  dermshare.py  gunicorn-ws.conf.py  gunicorn.conf.py  requirements.txt
app/static/: app.js  autosegmenter  browser.js  fil_autosegment  fil_fixedthumb  fil_gemini  fil_rgb  import.js  plot.js  remote.js  result.js  search.js  segment.js  util.js  websocket.js
app/templates/: index.html  remote.html  unsupported.html
autosegmenter/: .gitignore  Makefile.am  autosegment.xml  configure.ac  filter_loader.py  make-filter.py  requirements.txt
autosegmenter/autosegment/: __main__.py  diamond.py  hairremover.py  image.py  opencv.py  segmenter.py  util.py
autosegmenter/src/: autosegmenter.cpp
autosegmenter/src/Clustering/: ClusteringUtilities.cpp  ClusteringUtilities.h  KMeans.cpp  KMeans.h
autosegmenter/src/DataStructure/: Array2D.h  Region.h  Signature.h
autosegmenter/src/DissimilarityMeasure/: EMD.c  EMD.h  EMDInterface.cpp  EMDInterface.h
autosegmenter/src/DissimilarityMeasure/EMD/: EarthMoversDistance.mht  emd.h  example1.c
autosegmenter/src/IPPInterface/: IPPImage.h  IPPImage_16s.cpp  IPPImage_16u.cpp  IPPImage_32f.cpp  IPPImage_8u.cpp
autosegmenter/src/diamond/: diamond.cpp  diamond.h  rgb.h
autosegmenter/src/hairRemover/: hairRemover.cpp  hairRemover.h
autosegmenter/src/inpainting/: inpainter.cpp  inpainter.h
autosegmenter/src/math/: Matrix.cpp  Matrix.h  MatrixOperation.cpp  MatrixOperation.h  Vector.cpp  Vector.h
autosegmenter/src/segmenter/: segmenter.cpp  segmenter.h  segmenterEnums.h
dataretriever/: dermshare_dataretriever.py  gunicorn.conf.py  requirements.txt
gemini/: .gitignore  filter_loader.py  gemini.xml  make-filter.py  requirements.txt
gemini/gemini/: diagnoses.py  diamond.py  emd.py  extract.py  learn.py  palette.py  prst.py  symmetry.py  texture.py  trainingset.py  util.py  zortea.py
simplescope/: .gitignore  gunicorn.conf.py  requirements.txt  simplescope.py
simplescope/static/: jquery.js
simplescope/templates/: index.html  scope.html
